--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,50 +1,52 @@
+# 数据源 mayiktdb
+sharding:
+  jdbc:
+    datasource:
+      names: mayiktdb
+      # 第一个数据库
+      mayiktdb:
+        type: com.zaxxer.hikari.HikariDataSource
+        driver-class-name: com.mysql.jdbc.Driver
+        jdbc-url: jdbc:mysql://127.0.0.1:3306/mayiktdb?useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2B8
+        username: root
+        password: 123456
+    # 水平拆分的数据库（表） 配置分库 + 分表策略 行表达式分片策略
+    config:
+      sharding:
+        # 分库策略
+        #        default-database-strategy:
+        #          inline:
+        #            sharding-column: id
+        #            algorithm-expression: mayiktdb
+        # 分表策略 其中mayikt_user为逻辑表 分表主要取决于id字段
+        tables:
+          mayikt_user:
+            actual-data-nodes: mayiktdb.mayikt_user_$->{0..1}
+            table-strategy:
+              inline:
+                sharding-column: id
+                # 分片算法表达式
+                algorithm-expression: mayikt_user_$->{id % 2}
+
+      # 打印执行的数据库
+      props:
+        sql:
+          show: true
+
+# 打印执行的sql语句
 spring:
-  datasource:
-    password: 123456
-    driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/mayiktdb?useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2B8
-    username: root
-    # 下面为连接池的补充设置，应用到上面所有数据源中
-    # 初始化大小，最小，最大
-    initial-size: 5
-    min-idle: 5
-    max-active: 20
-    # 配置获取连接等待超时的时间
-    max-wait: 60000
-    # 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
-    time-between-eviction-runs-millis: 60000
-    # 配置一个连接在池中最小生存的时间，单位是毫秒
-    min-evictable-idle-time-millis: 300000
-    validation-query: SELECT 1 FROM DUAL
-    test-while-idle: true
-    test-on-borrow: false
-    test-on-return: false
-    # 打开PSCache，并且指定每个连接上PSCache的大小
-    pool-prepared-statements: true
-    #   配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
-    max-pool-prepared-statement-per-connection-size: 20
-    filters: stat,wall
-    use-global-data-source-stat: true
-    # 通过connectProperties属性来打开mergeSql功能；慢SQL记录
-    connect-properties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
-  mail:
-    host: smtp.163.com #这里换成自己的邮箱类型 例如qq邮箱就写smtp.qq.com
-    username: mayikt644064779@163.com #QQ邮箱
-    password: SXFHEORNKHJGSUNM #邮箱密码或者授权码
-    protocol: smtp #发送邮件协议
-    properties.mail.smtp.auth: true
-    properties.mail.smtp.port: 465 #端口号465或587
-    properties.mail.smtp.starttls.enable: true
-    properties.mail.smtp.starttls.required: true
-    properties.mail.smtp.ssl.enable: true #开启SSL
-    default-encoding: utf-8
+  main:
+    allow-bean-definition-overriding: true
 logging:
   level:
     ###打印mybatis日志
     com.mayikt.mapper : debug
-mayikt:
-   max:
-     heap : 400
 server:
   port: 8080
-
+# Swagger
+swagger:
+  host:
+  title: SpringBoot 整合 Swagger2
+  description: 网站描述
+  disabled: true # 是否禁用swagger
+  redirect-uri: / # 禁用swagger时的重定向地址
